feat: Use JustWatch API
